--- a/app/index.html
+++ b/app/index.html
@@ -35,39 +35,108 @@
 			<div class="logo">
 				<img class="logo__img" src="img/logo.svg" alt="Logo">
 			</div>
-			<div class="folders folders_active-orange">
-				<div class="folders__folder folders__folder_orange">1</div>
-				<div class="folders__folder folders__folder_brown">2</div>
-				<div class="folders__folder folders__folder_red">3</div>
-			</div>	
 			<a href="#" class="burger"></a>	
-		</div>
-		<div class="t3-form t3-form_orange t3-form_active" id="step-1">
-			<div class="t3-form__slide">
-				<div class="t3-form__slide_title">
-					Всего три простых шага <br> 
-					для получения бонусов!	
+		</div>		
+
+		<div class="t3-form-container">
+			<form class="t3-form t3-form_orange t3-form_active">
+				<div class="t3-form__slide">
+					<div class="t3-form__slide_title">
+						Всего три простых шага <br> 
+						для получения бонусов!	
+					</div>
+					<img class="t3-form__slide_img" src="img/content/slide-1.png" alt="slide-1">
 				</div>
-				<img class="t3-form__slide_img" src="img/content/slide-1.png" alt="slide-1">
-			</div>
-			<div class="t3-form__fields">
-				<input class="t3-form__input" type="text" id="lastName" placeholder="Фамилия">
-				<input class="t3-form__input" type="text" id="firstName" placeholder="Имя">
-				<input class="t3-form__input" type="text" id="patronymic" placeholder="Отчество">				
-				
-				<input class="t3-form__radio" type="radio" checked id="gender1" name="gender" value="male">
-				<label class="t3-form__radio-label" for="gender1">Мужчина</label>
-				<input class="t3-form__radio" type="radio" id="gender2" name="gender" value="female">
-				<label class="t3-form__radio-label" for="gender2">Женщина</label>
-				
-				<input class="t3-form__checkbox" type="checkbox" name="acceptConditions" id="acceptConditions">
-				<label class="t3-form__checkbox-label" for="acceptConditions">Соглашаюсь с условиями участия</label>
+				<div class="t3-form__fields">
+					<div class="t3-form__group">
+						<input class="t3-form__input" type="text" id="lastName" placeholder="Фамилия" autocomplete="off">
+					</div>
+					<div class="t3-form__group">	
+						<input class="t3-form__input" type="text" id="firstName" placeholder="Имя" autocomplete="off">
+					</div>
+					<div class="t3-form__group t3-form__group_patronymic t3-form__group_error">
+						<input class="t3-form__input" type="text" id="patronymic" placeholder="Отчество" autocomplete="off">	
+						<div class="t3-form__text-error">
+							Это поле обязательное для заполнения
+						</div>		
+					</div>
+					<div class="t3-form__group t3-form__group_gender">
+						<input class="t3-form__radio" type="radio" checked id="gender1" name="gender" value="male">
+						<label class="t3-form__radio-label" for="gender1">Мужчина</label>
+						<input class="t3-form__radio" type="radio" id="gender2" name="gender" value="female">
+						<label class="t3-form__radio-label" for="gender2">Женщина</label>
+					</div>
+					<div class="t3-form__group t3-form__group_date">
+						<input type="text" class="t3-form__input" id="date" placeholder="Дата рождения">
+					</div>
+					<div class="t3-form__group t3-form__group_accept">
+						<input class="t3-form__checkbox" type="checkbox" name="acceptConditions" id="acceptConditions">
+						<label class="t3-form__checkbox-label" for="acceptConditions">Соглашаюсь с условиями участия</label>
+					</div>
+					<button class="t3-form__btn t3-form__btn_arrow">
+						Продолжить	
+					</button>
+				</div>
+			</form>
 
-				<button class="t3-form__radio-label">
-					Продолжить	
-				</button>
 
-			</div>
+			<form class="t3-form t3-form_brown">
+				<div class="t3-form__slide">
+					<div class="t3-form__slide_title">
+						Половина пути уже <br>
+						пройдена	
+					</div>
+					<img class="t3-form__slide_img" src="img/content/slide-2.png" alt="slide-2">
+				</div>
+				<div class="t3-form__fields">
+					<div class="t3-form__group">
+						<input class="t3-form__input" type="text" placeholder="Телефон" autocomplete="off">
+					</div>
+					<div class="t3-form__group">	
+						<input class="t3-form__input" type="text" placeholder="Email" autocomplete="off">
+					</div>
+					<div class="t3-form__group">
+						<input class="t3-form__input" type="text" placeholder="Пароль" autocomplete="off">				
+					</div>
+					<div class="t3-form__group t3-form__group_repeat-passw">
+						<input class="t3-form__input" type="text" placeholder="Повторить пароль" autocomplete="off">			
+					</div>
+					<button class="t3-form__btn t3-form__btn_arrow">
+						Продолжить	
+					</button>
+				</div>
+			</form>
+
+
+			<form class="t3-form t3-form_red">
+				<div class="t3-form__slide">
+					<div class="t3-form__slide_title">
+						Осталось совсем <br>
+						чуть-чуть 	
+					</div>
+					<img class="t3-form__slide_img" src="img/content/slide-3.png" alt="slide-2">
+				</div>
+				<div class="t3-form__fields">
+					<div class="t3-form__group t3-form__group_message">
+						На номер <b>+375293334455 </b> <br>
+						отправлен код подтверждения
+					</div>
+					<div class="t3-form__group t3-form__group_text">
+						Введите его в поле ниже:
+					</div>
+					<div class="t3-form__group t3-form__group_code">
+						<input class="t3-form__input" type="text" placeholder="Код" autocomplete="off">			
+					</div>
+					<button class="t3-form__btn">
+						Продолжить	
+					</button>
+					<div class="t3-form__group t3-form__group_text">
+						<a href="#">
+							Отправить код еще раз
+						</a>
+					</div>
+				</div>
+			</form>
 		</div>
 	</div>
 	
